# InfiniOps

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test.py  test_cuda.py
examples/: CMakeLists.txt  README.md  data_type.cc  gemm.py  runtime_api.h  tensor.cc
examples/distributed_matmul/: README.md  distributed_matmul.cc  ninetoothed_matmul_demo.py  ninetoothed_showcase.html  run_ninetoothed_remote.sh  run_remote.sh  showcase.html  web_server.py
examples/gemm/: README.md  gemm.cc  gemm_dispatch.cc
examples/metax/gemm/: mcblas.cc
examples/nvidia/gemm/: cublas.cc
src/: CMakeLists.txt  cast.h  caster.h  config.h  data_type.h  device.h  dispatcher.h  handle.h  hash.h  host_range_profiler.cc  host_range_profiler.h  impl.h  operator.h  pybind11_utils.h  runtime.h  small_vector.h  tensor.cc  tensor.h
src/ascend/: atb_common_.h  common.h  data_type_.h  device.h  device_.h  runtime_.h  workspace_pool_.h
src/ascend/add/: kernel.h
src/ascend/add_rms_norm/: kernel.h  kernel_custom.h  kernel_fused.h  registry.h
src/ascend/apply_rotary_pos_emb/: kernel.h  kernel_atb.h  registry.h
src/ascend/cast/: kernel.h
src/ascend/cat/: kernel.h
src/ascend/causal_softmax/: kernel.h
src/ascend/custom/: CMakeLists.txt  ops.h  torch_binding.cpp
src/ascend/custom_kernel/: .gitignore  CMakeLists.txt  build.sh
src/ascend/flash_attention/: kernel.h
src/ascend/gemm/: kernel.h
src/ascend/linear/: kernel.h
src/ascend/matmul/: kernel.h
src/ascend/mul/: kernel.h
src/ascend/paged_attention/: kernel_atb.h  registry.h
src/ascend/reshape_and_cache/: kernel.h  kernel_atb.h  kernel_v2.h  registry.h
src/ascend/rms_norm/: kernel.h  kernel_custom.h  registry.h
src/ascend/rotary_embedding/: kernel.h  kernel_atb.h  kernel_sincos_cache.h  registry.h
src/ascend/silu_and_mul/: kernel.h  registry.h
src/ascend/swiglu/: kernel.h  kernel_fused.h  registry.h
src/ascend/topk_topp_sampling/: kernel_atb.h  registry.h
src/base/: abs.h  absolute.h  acos.h  acosh.h  adaptive_avg_pool2d.h  adaptive_avg_pool3d.h  adaptive_avg_pool3d_backward.h  adaptive_avg_pool3d_backward_grad_input.h  adaptive_max_pool2d.h  adaptive_max_pool2d_backward.h  adaptive_max_pool2d_backward_grad_input.h  adaptive_max_pool3d.h  adaptive_max_pool3d_backward.h  adaptive_max_pool3d_backward_grad_input.h  add.h  add_inplace.h  add_rms_norm.h  addbmm.h  addcdiv.h  addcmul.h  addmm.h  addmv.h  addr.h  all.h  all_all.h  all_dims.h  amax.h  amin.h  aminmax.h  angle.h  any.h  any_all.h  any_dims.h  apply_rotary_pos_emb.h  arccos.h  arccosh.h  arcsin.h  arcsinh.h  arctan.h  arctan2.h  (+758 more)
src/base/detail/: max_unpool.h
src/cambricon/: cast.h  cast_.h  caster_.h  common.h  data_type_.h  device_.h  runtime_.h
src/cambricon/add/: add.h  kernel.mlu
src/cambricon/causal_softmax/: causal_softmax.h  kernel.mlu
src/cambricon/gemm/: cnblas.h
src/cambricon/rms_norm/: kernel.mlu  rms_norm.h
src/cambricon/rmsnorm/: kernel.mlu  rms_norm.h
src/cambricon/swiglu/: kernel.mlu  swiglu.h
src/common/: cast.h  constexpr_map.h  generic_utils.h  traits.h
src/common/cpu/: cast.h
src/common/cuda/: cast.h  kernel_commons.h
src/cpu/: cast.h  cast_.h  caster_.h  data_type_.h  device_.h  runtime_.h
src/cpu/add/: add.h  dsl.h  registry.h
src/cpu/add_rms_norm/: add_rms_norm.h
src/cpu/cast/: cast.h  dsl.h  registry.h
src/cpu/cat/: cat.h
src/cpu/causal_softmax/: causal_softmax.h
src/cpu/gemm/: gemm.h
src/cpu/linear/: linear.h
src/cpu/matmul/: matmul.h
src/cpu/mul/: dsl.h  mul.h  registry.h
src/cpu/random_sample/: random_sample.h
src/cpu/rms_norm/: dsl.h  registry.h  rms_norm.h
src/cpu/swiglu/: dsl.h  registry.h  swiglu.h
src/cpu/templates/: binary_elementwise.h  reduce_transform.h  unary_elementwise.h
src/cuda/: cast.h  cast_.h  caster.cuh  caster_.h  kernel_commons.cuh  kernel_commons.h  runtime.h  runtime_utils.h
src/cuda/add/: dsl.h  kernel.cuh  kernel.h
src/cuda/add_rms_norm/: kernel.cuh  kernel.h
src/cuda/cast/: dsl.h  kernel.cuh  kernel.h
src/cuda/cat/: kernel.cuh  kernel.h
src/cuda/causal_softmax/: kernel.cuh  kernel.h
src/cuda/flash_attention/: kernel.h
src/cuda/gemm/: blas.h
src/cuda/iluvatar/: blas.h  caster.cuh  data_type_.h  runtime_.h  runtime_utils.h
src/cuda/linear/: kernel.cuh  kernel.h
src/cuda/matmul/: blas.h
src/cuda/metax/: blas.h  blas_utils.h  caster.cuh  data_type_.h  runtime_.h  runtime_utils.h
src/cuda/moore/: blas.h  data_type_.h  runtime_.h  runtime_utils.h
src/cuda/mul/: dsl.h
src/cuda/nvidia/: blas.h  caster.cuh  data_type_.h  paged_gather_launcher.cu  paged_gather_launcher.h  runtime_.h  runtime_utils.h
src/cuda/paged_caching/: kernel.cuh  kernel.h
src/cuda/paged_gather/: kernel.cuh
src/cuda/random_sample/: kernel.h
src/cuda/reshape_and_cache/: kernel.cuh  kernel.h
src/cuda/rms_norm/: dsl.h  kernel.cuh  kernel.h
src/cuda/rotary_embedding/: kernel.cuh  kernel.h
src/cuda/swiglu/: dsl.h  kernel.cuh  kernel.h
src/cuda/templates/: binary_elementwise.cuh  reduce_transform.cuh  unary_elementwise.cuh
src/hygon/: blas.h  blas_utils.h  device_.h  runtime_.h  runtime_utils.h
src/hygon/add/: kernel.h
src/hygon/causal_softmax/: kernel.h
src/hygon/gemm/: cublas.h
src/hygon/rms_norm/: kernel.h
src/iluvatar/: blas.h  caster.cuh  caster_.h  data_type_.h  device_.h  runtime_.h  runtime_utils.h
src/iluvatar/add/: kernel.h
src/iluvatar/add_rms_norm/: kernel.h  registry.h
src/iluvatar/cast/: kernel.h
src/iluvatar/cat/: kernel.h
src/iluvatar/causal_softmax/: kernel.h
src/iluvatar/gemm/: cublas.h
src/infini/: ops.cc  ops.map
src/metax/: blas.h  caster.cuh  caster_.h  data_type_.h  device_.h  runtime_.h  runtime_utils.h
src/moore/: blas.h  blas_utils.h  caster_.h  data_type_.h  device_.h  polyfills.cuh  runtime_.h  runtime_utils.h
src/ninetoothed/: tensor.h
src/nvidia/: blas.h  blas_utils.h  caster.cuh  caster_.h  data_type_.h  device_.h  runtime_.h  runtime_utils.h
src/torch/: device_.h  pybind11_.cc  pybind11_.h  tensor_.h
(+828 files in other folders)
